Update flakes-updater action to use version v2

--- a/.github/workflows/update-flakes.yml
+++ b/.github/workflows/update-flakes.yml
@@ -8,6 +8,6 @@ jobs:
   update-flakes:
     runs-on: ubuntu-latest
     steps:
-    - uses: Comamoca/flakes-updater@2
+    - uses: Comamoca/flakes-updater@v2
       with:
           token: ${{ secrets.GITHUB_TOKEN }}
