updated flake update github action

--- a/.github/workflows/update-flakes.yml
+++ b/.github/workflows/update-flakes.yml
@@ -1,13 +1,28 @@
-name: Update Flakes on Sunday
+name: Update Flake Lock
+
 on:
-  schedule:
-    - cron: '0 0 * * 0'  # Weekly on Sunday
   workflow_dispatch:
+  schedule:
+    - cron: "0 5 * * 1"
 
 jobs:
-  update-flakes:
+  update-flake:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+
     steps:
-      - uses: Comamoca/flakes-updater@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install Nix
+        uses: cachix/install-nix-action@v27
         with:
+          nix_path: nixpkgs=channel:nixos-unstable
+
+      - name: Update flake.lock
+        uses: DeterminateSystems/update-flake-lock@v2
+        with:
+          pr-title: "chore: update flake.lock"
           token: ${{ secrets.GITHUB_TOKEN }}
