--- a/.github/workflows/update-flakes.yml
+++ b/.github/workflows/update-flakes.yml
@@ -21,8 +21,7 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-unstable
 
-      - name: Update flake.lock
+      - name: "chore: update flake"
         uses: DeterminateSystems/update-flake-lock@v2
         with:
-          pr-title: "chore: update flake.lock"
           token: ${{ secrets.GITHUB_TOKEN }}
